Remove JDK 19 options